# GymSystem

./: .dockerignore  .env  .env.production  .gitignore  .vercelignore  BACKUP_SERVICE.md  DEPLOYMENT_GUIDE.md  DETENER_SISTEMA.bat  Dockerfile  ENVIRONMENT_SETUP.md  GUIA_PRODUCCION.md  GUIA_RAPIDA.md  HEALTH_CHECKS.md  INSTALAR_SISTEMA.bat  MEJORAS_IMPLEMENTADAS.md  MONITORING_SYSTEM.md  NGINX_CONFIGURATION.md  PLAN_MEJORAS_CLIENTE.md  Procfile  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  RESUMEN_DESPLEGUE.md  TODO.md  VER_ESTADO.bat  check_production_ready.py  deployment_config.json  deployment_logs_web_1753482276228.txt  docker-compose-simple.yml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  gunicorn.conf.py  heroku-setup.sh  install-production.sh  maintenance.sh  monitoring_config.json  package-lock.json  package.json  phase4_config.json  pnpm-lock.yaml  (+12 more)
.trae/documents/: frontend_backend_integration_plan.md  gym_admin_system_requirements.md  gym_system_comprehensive_repair_plan.md  gym_system_error_repair_guide.md  gym_system_modular_python.md  gym_system_repair_plan.md  (+2 more)
.vercel/: project.json
backend/: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  add_database_indexes.py  alembic.ini  check_users.py  create_admin_simple.py  direct_login_test.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  env.production  gunicorn.conf.py  init-db.sql  init_database.py  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  security_check.py  simple_auth_test.py  start.py  start_server.py  test.db  test_auth.py  test_debug_endpoints.py  test_direct_login.py  test_integration.db  test_login.py  test_login_detailed.py  test_login_simple.py  verify_user.py
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  classes.py  employees.py  exercises.py  memberships.py  payments.py  reports.py  routines.py  users.py
backend/app/api/v1/: api.py  audit.py  backup.py  config.py  email.py  health.py  integrations.py  monitoring.py  notifications.py  push_notifications.py  whatsapp.py
backend/app/core/: __init__.py  audit.py  auth.py  background_tasks.py  cache.py  config.py  database.py  database_optimizations.py  exceptions.py  init_db.py  logging.py  middleware.py  migrations.py  performance.py  rate_limiting.py  redis.py  security.py  utils.py  validation.py
backend/app/core/config/: __init__.py  base.py  database.py  redis.py  security.py  services.py
backend/app/middleware/: __init__.py  attack_detection.py  audit_middleware.py  auth.py  error_handler.py  ip_blocking.py  logging.py  rate_limit.py  request_id.py  security.py  security_headers.py
backend/app/models/: __init__.py  asistencias.py  checkin.py  clases.py  class_model.py  class_reservation.py  configuration.py  empleados.py  employee.py  enums.py  exercise.py  logos.py  membership.py  multimedia.py  pagos.py  routine.py  rutinas.py  tipos_cuota.py  user.py  user_progress.py  usuarios.py
backend/app/routers/: __init__.py  asistencias.py  auth.py  clases.py  configuracion.py  empleados.py  logos.py  multimedia.py  pagos.py  reportes.py  rutinas.py  sync.py  tipos_cuota.py  usuarios.py
backend/app/schemas/: __init__.py  asistencias.py  auth.py  base.py  clases.py  class_schema.py  configuracion.py  configuration.py  empleados.py  employee.py  exercise.py  logos.py  membership.py  multimedia.py  pagos.py  routine.py  rutinas.py  sync.py  tipos_cuota.py  user.py  usuarios.py
backend/app/scripts/: create_admin.py
backend/app/services/: analytics_service.py  asistencia_service.py  audit_service.py  backup_service.py  clase_service.py  config_service.py  email_service.py  empleados_service.py  file_storage_service.py  health_service.py  instagram_service.py  integration_service.py  monitoring_service.py  notification_service.py  pago_service.py  performance_analytics_service.py  push_notification_service.py  reportes_service.py  routine_ai_service.py  rutina_service.py  websocket_service.py  whatsapp_service.py
backend/app/utils/: pagination.py  template_engine.py
backend/scripts/: create_admin.py  docker-entrypoint.sh  healthcheck.py
backend/templates/email/: class_reminder.html  payment_reminder.html  welcome.html
backend/tests/: __init__.py  conftest.py  test_automated_suite.py  test_main.py
backend/tests/e2e/: __init__.py  test_usability.py
backend/tests/integration/: __init__.py  test_integration.py
backend/tests/performance/: __init__.py  test_load.py  test_performance.py  test_performance_optimizations.py
backend/tests/security/: __init__.py  test_security.py  test_security_optimizations.py
backend/tests/unit/: __init__.py  test_reportes.py  test_services.py  test_utils_pagination.py
backups/: .gitkeep
cliente/: api_client.py  main.py  requirements-dev.txt  requirements.txt  sync_service.py
config/: combine_env.sh
docs/: DEPLOYMENT.md  FASE_5_1_SINCRONIZACION_TIEMPO_REAL.md  FINAL_REPORT.md  SECURITY_GUIDE.md  api.md
frontend/: .env.production  .eslintrc.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
monitoring/: .gitkeep  alert_rules.yml  prometheus.yml
nginx/: nginx.conf
reports/: firewall_setup_20250711_004838.json
scripts/: backup_system.ps1  check_status.ps1  config_manager.py  container_hardening.py  create_admin.py  create_env.ps1  database_optimization.py  deploy.ps1  deploy.sh  deploy_production.py  firewall_setup.py  generate_secure_keys.py  generate_ssl_certs.sh  health_check_all.sh  install_docker.ps1  monitoring_dashboard.py  run_phase3_checks.py  run_phase4_tests.py  run_phase5_deployment.py  security_audit.py  security_validation.py  setup_production.ps1  start_gym_system.ps1  stop_gym_system.ps1
uploads/: .gitkeep
web/: .env.example  .eslintrc.json  Dockerfile  env.production  next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: layout.tsx  (+2 more)
(+340 files in other folders)
